# libavifinfo-mirror

./: CMakeLists.txt  Cargo.toml  README.md  avifinfo.c  avifinfo.h  avifinfo.php  avifinfo.rs
.github/workflows/: mirror.yml
tests/: avifinfo_fuzz.cc  avifinfo_fuzz_fast.cc  avifinfo_test.cc  avifinfo_test.php  avifinfo_test.rs  avifinfo_test_12x34_gainmap_tmap.avif
tools/: avifinfo_tool.cc
